# SwiftieFriend

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
config/: etl_config.json  swiftie_chat_system_instructions.txt
dags/: youtube_pipeline_dag.py
data/: album_songs_summary
notebooks/: create_swiftie_db.ipynb  load_youtube_data.ipynb  swiftie_chat.ipynb
python/: etl_swiftiechat_pipeline.py  extract_collection_db.py  extract_youtube_videos.py  generative_model_tools.py  load.py  load_youtube_videos_info.py  pipeline.py  run_youtube_pipeline.py  swiftie_chat.py  transform.py
tests/: test_etl_swiftiechat_pipeline.py
