[project]
name = "swiftie-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "gradio==5.6.0",
    "langchain-community>=0.3.29",
    "pandas>=2.3.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.7",
    "pytest>=8.4.2",
]
