[project]
name = "swiftie-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "chromadb>=1.0.21",
    "databricks>=0.2",
    "databricks-cli>=0.18.0",
    "fuzzywuzzy>=0.18.0",
    "google-genai>=1.36.0",
    "google-generativeai>=0.8.5",
    "gradio==5.45.0",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "pandas>=2.3.2",
    "rapidfuzz>=3.14.1",
    "sentence-transformers>=5.1.0",
    "wordninja>=2.0.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.7",
    "pytest>=8.4.2",
]
